--- a/assets/styles/post.css
+++ b/assets/styles/post.css
@@ -1,5 +1,5 @@
 body {
-	margin: 12vh auto;
+	margin: 8vh auto;
 	max-width: 800;
 	background-color: #EBD7C3;
 
@@ -12,17 +12,38 @@ a {
 	text-decoration: none;
 }
 
+h5 {
+	margin: 0;
+}
+
 .active {
 	background-color: #B57459;
 }
 
 .thought-title {
-	font-size: 2.5em;
+	/*font-size: 2.5em;*/
 }
 
 .thought-pub-date {
 	font-family: 'Courier';
 	margin-bottom: 1em;
+}
+
+.thought-paragraph {
+	line-height: 1.5em;
+	margin-bottom: 0.5em;
+}
+
+.back-container {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+}
+
+.back-img {
+	font-weight: 500;
+	height: 1.5em;
+	padding-right: 0.25em;
 }
 
 @media only screen and (max-width: 800px) {
@@ -31,9 +52,14 @@ a {
 	}
 }
 
+blockquote {
+	margin: 0;
+	margin-bottom: 1em;
+	padding: 10px;
+	line-height: 1.5em;
+	border-left: 6px solid #444;
 
-
-
+}
 
 
 
